syntax = "proto3";

package o5.aws.deployer.v1.service;

import "google/api/annotations.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";
import "o5/aws/deployer/v1/deployment.proto";
import "o5/aws/deployer/v1/environment.proto";
import "o5/aws/deployer/v1/stack.proto";

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/aws/deployer/v1/awsdeployer_spb";

service DeploymentQueryService {
  option (j5.ext.v1.service).state_query.entity = "deployment";

  rpc GetDeployment(GetDeploymentRequest) returns (GetDeploymentResponse) {
    option (google.api.http) = {get: "/deployer/v1/q/deployment/{deployment_id}"};
    option (j5.ext.v1.method).state_query.get = true;
  }

  rpc ListDeploymentEvents(ListDeploymentEventsRequest) returns (ListDeploymentEventsResponse) {
    option (google.api.http) = {
      post: "/deployer/v1/q/deployment/{deployment_id}/events"
      body: "*"
    };
    option (j5.ext.v1.method).state_query.list_events = true;
  }

  rpc ListDeployments(ListDeploymentsRequest) returns (ListDeploymentsResponse) {
    option (google.api.http) = {
      post: "/deployer/v1/q/deployments"
      body: "*"
    };
    option (j5.ext.v1.method).state_query.list = true;
  }
}

service StackQueryService {
  option (j5.ext.v1.service).state_query.entity = "stack";
  rpc GetStack(GetStackRequest) returns (GetStackResponse) {
    option (google.api.http) = {get: "/deployer/v1/q/stack/{stack_id}"};
    option (j5.ext.v1.method).state_query.get = true;
  }

  rpc ListStacks(ListStacksRequest) returns (ListStacksResponse) {
    option (google.api.http) = {
      post: "/deployer/v1/q/stacks"
      body: "*"
    };
    option (j5.ext.v1.method).state_query.list = true;
  }

  rpc ListStackEvents(ListStackEventsRequest) returns (ListStackEventsResponse) {
    option (google.api.http) = {
      post: "/deployer/v1/q/stack/{stack_id}/events"
      body: "*"
    };
    option (j5.ext.v1.method).state_query.list_events = true;
  }
}

service EnvironmentQueryService {
  option (j5.ext.v1.service).state_query.entity = "environment";
  rpc ListEnvironments(ListEnvironmentsRequest) returns (ListEnvironmentsResponse) {
    option (google.api.http) = {
      post: "/deployer/v1/q/environments"
      body: "*"
    };
    option (j5.ext.v1.method).state_query.list = true;
  }

  rpc GetEnvironment(GetEnvironmentRequest) returns (GetEnvironmentResponse) {
    option (google.api.http) = {get: "/deployer/v1/q/environment/{environment_id}"};
    option (j5.ext.v1.method).state_query.get = true;
  }

  rpc ListEnvironmentEvents(ListEnvironmentEventsRequest) returns (ListEnvironmentEventsResponse) {
    option (google.api.http) = {
      post: "/deployer/v1/q/environment/{environment_id}/events"
      body: "*"
    };
    option (j5.ext.v1.method).state_query.list_events = true;
  }
}
message GetDeploymentRequest {
  string deployment_id = 1;
}

message GetDeploymentResponse {
  o5.aws.deployer.v1.DeploymentState state = 1;
  repeated o5.aws.deployer.v1.DeploymentEvent events = 2;
}

message ListDeploymentEventsRequest {
  string deployment_id = 1;

  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
}

message ListDeploymentEventsResponse {
  repeated o5.aws.deployer.v1.DeploymentEvent events = 1;

  j5.list.v1.PageResponse page = 100;
}

message ListDeploymentsRequest {
  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
  option (j5.list.v1.list_request) = {
    sort_tiebreaker: ["keys.deployment_id"]
  };
}

message ListDeploymentsResponse {
  repeated o5.aws.deployer.v1.DeploymentState deployments = 1;

  j5.list.v1.PageResponse page = 100;
}

message GetStackRequest {
  string stack_id = 1;
}

message GetStackResponse {
  o5.aws.deployer.v1.StackState state = 1;
  repeated o5.aws.deployer.v1.StackEvent events = 2;
}

message ListStacksRequest {
  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
  option (j5.list.v1.list_request) = {
    sort_tiebreaker: ["keys.stack_id"]
  };
}

message ListStacksResponse {
  repeated o5.aws.deployer.v1.StackState stacks = 1;

  j5.list.v1.PageResponse page = 100;
}

message ListStackEventsRequest {
  string stack_id = 1;

  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
}

message ListStackEventsResponse {
  repeated o5.aws.deployer.v1.StackEvent events = 1;

  j5.list.v1.PageResponse page = 100;
}

message ListEnvironmentsRequest {
  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
}

message ListEnvironmentsResponse {
  repeated o5.aws.deployer.v1.EnvironmentState environments = 1;

  j5.list.v1.PageResponse page = 100;
}

message GetEnvironmentRequest {
  string environment_id = 1;
}

message GetEnvironmentResponse {
  o5.aws.deployer.v1.EnvironmentState state = 1;
  repeated o5.aws.deployer.v1.EnvironmentEvent events = 2;
}

message ListEnvironmentEventsRequest {
  string environment_id = 1;

  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
}

message ListEnvironmentEventsResponse {
  repeated o5.aws.deployer.v1.EnvironmentEvent events = 1;

  j5.list.v1.PageResponse page = 100;
}
